--- a/software/myshoppingcart/client/index.html
+++ b/software/myshoppingcart/client/index.html
@@ -47,6 +47,7 @@
   <script src="/bower_components/angular-jk-rating-stars/dist/jk-rating-stars.js"></script>
   <script src="/bower_components/angular-filter/dist/angular-filter.js"></script>
   <script src="/bower_components/angular-translate/angular-translate.js"></script>
+  <script src="/bower_components/checklist-model/checklist-model.js"></script>
 
 
   <script src="app/modules/app.module.js"></script>
